# ctoy-game

./: build_rust.bat  imgui.ini
data/: test.frg.glsl  test.vtx.glsl
include/: ctoy.h  rustlib.h
rustlib/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  run-test.bat  rustlib.h
rustlib/internal/: Cargo.toml
rustlib/internal/src/: physics.rs
rustlib/src/: lib.rs
rustlib/src/test/: main.rs
src/: camera.h  gl.c  graphics.h  main.c  mouse.h  test.c  types.h  util.h
src/util/: gl_util.c
